<resources>
    <string name="app_name">Shifumi</string>
    <string name="startButtonLabel">Start</string>
    <string name="empty_wifi_devices_list">"No connectable devices found "</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="reload_btn_description">Reload the list of available devices for Wi-Fi direct</string>
    <string name="exitApp">Leave</string>
    <string name="endgameMsg">Game over!</string>
    <string name="next">Next</string>
    <string name="score">Score: {0} - {1}</string>
    <string name="wifiDirectIsOn">WiFi direct is activated</string>
    <string name="wifiDirectIsOff">WiFi direct is deactivated</string>
    <string name="connectionSuccessful">Connection successful</string>
    <string name="connectionFailure">Connection failed</string>
    <string name="permissionGranted">Permissions granted</string>
    <string name="validate_msg">Validate</string>
    <string name="button_for_paper">button for paper choice</string>
    <string name="button_for_rock">button for rock choice</string>
    <string name="button_for_scissors">button for scissors choice</string>
    <string name="your_selected_choice">your selected choice</string>
    <string name="opponent_choice">opponent choice</string>
    <string name="round_result">round result</string>
    <string name="please_make_a_choice_before_validation">Please make a choice before validation.</string>
</resources>