<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GameRoundResultFragment">

    <!-- Image du joueur -->
    <ImageView
        android:id="@+id/imagePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="100dp"
        android:contentDescription="@string/your_selected_choice" />

    <!-- Image de l'adversaire -->
    <ImageView
        android:id="@+id/imageOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        android:contentDescription="@string/opponent_choice" />

    <!-- Croix ou coche au milieu -->
    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:contentDescription="@string/round_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gameScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|end"
                android:text=""
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/exitApp" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>